
//子任务序列化到db使用！
message db_user_sub_task{
    /** 子任务ID */
    required uint32 sub_task_id = 1 [default = 0];

    /** 星级 */
    required uint32 star = 2 [default = 0];
}

message db_user_sub_task_array {
    repeated db_user_sub_task sub_tasks = 1;
}

//任务序列化到db使用！
//message db_user_task{
//    /** 任务ID */
//    required uint32 task_id = 1 [default = 0];
//}